--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="css/style.min.css" />
         <title>Aer | Home</title>
     </head>
 
@@ -103,7 +103,7 @@
                 </div>
             </section>
             <section class="news">
-                <img src="/aer.jpg" alt="news img" class="news__img" />
+                <img src="img/aer.jpg" alt="news img" class="news__img" />
                 <div class="news__new">
                     <h3>News</h3>
                     <p class="news__details">
