--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <input type="checkbox" name="menubtn" id="menubtn" />
             <aside class="menu">
-                <label for="menubtn" class="menu__btn">
+                <label for="menubtn" class="menu__btn noSelect">
                     <span class="menu__icon"></span>
                 </label>
                 <ul class="menu__social">
@@ -75,7 +75,7 @@
                     designed for a
                     <span
                         >new generation specifically for the modern
-                        professional</span
+                        professional.</span
                     >
                 </p>
             </section>
