--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="css/style.min.css" />
+        <link rel="stylesheet" href="css/style.prefix.css" />
         <title>Aer | Home</title>
     </head>
 
